--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Title</title>
+    <link href="./style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 
-<div>
+<div class="container">
     <h1>Todo list</h1>
-    <form>
-        <input id="todo-input" type="text">
-        <button type="submit">Add</button>
-    </form>
-    <ul>
+    <h4>Completed tasks: <span id="counter"></span></h4>
 
-    </ul>
-    <span id="counter"></span>
+    <div class="row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s6">
+                    <input id="todo-input" placeholder="TODO item" type="text" class="validate">
+                    <button class="waves-effect waves-light btn-large" type="submit">SAVE</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <ul class="collection"></ul>
 </div>
 
 <script src="index.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
