--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link href="./node_modules/materialize-css/dist/css/materialize.min.css" rel="stylesheet"/>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
 </head>
 <body>
 
@@ -30,6 +33,7 @@
 </main>
 
 <script src="index.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
 </html>
