--- a/index.html
+++ b/index.html
@@ -4,36 +4,33 @@
     <title>Title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="./style.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link href="./node_modules/materialize-css/dist/css/materialize.min.css" rel="stylesheet"/>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-
 </head>
 <body>
 
-<main>
+    <main>
 
-    <div class="row">
-        <div>
-            <form class="input-field">
-                <label for="todo-input">What is your main focus for today?</label>
-                <input id="todo-input" type="text" class="validate input-field off">
-                <button class="waves-effect waves-light btn" type="submit">SAVE</button>
-                <h5>Completed tasks: <span id="counter"></span></h5>
-            </form>
+        <div class="row">
+            <div>
+                <form class="input-field">
+                    <label for="todo-input">What is your main focus for today?</label>
+                    <input id="todo-input" type="text" class="validate input-field off">
+                    <button class="waves-effect waves-light btn" type="submit">SAVE</button>
+                    <h5>Completed tasks: <span id="counter"></span></h5>
+                </form>
+            </div>
         </div>
-    </div>
 
-    <section id="tasks_list" class="z-depth-5">
-        <ul class="collection"></ul>
-    </section>
-</main>
+        <section id="tasks_list" class="z-depth-5">
+            <ul class="collection"></ul>
+        </section>
 
-<script src="index.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    </main>
+
+<script src="./js/index.js"></script>
 <script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
 </html>
