--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="./css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link href="./node_modules/materialize-css/dist/css/materialize.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
@@ -32,5 +35,6 @@
 
 <script src="./js/index.js"></script>
 <script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
