--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="./css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link href="./node_modules/materialize-css/dist/css/materialize.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 
@@ -19,22 +16,27 @@
         <div class="row">
             <div>
                 <form class="input-field">
-                    <label for="todo-input">What is your main focus for today?</label>
-                    <input id="todo-input" type="text" class="validate input-field off">
-                    <button class="waves-effect waves-light btn" type="submit">SAVE</button>
-                    <h5>Completed tasks: <span id="counter"></span></h5>
+                    <div class="row">
+                        <label for="todo-input">What is your main focus for today?</label>
+                        <input id="todo-input" type="text" class="validate input-field off col s10">
+                        <button type="submit" class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></button>
+                    </div>
                 </form>
             </div>
         </div>
 
         <section id="tasks_list" class="z-depth-5">
-            <ul class="collection"></ul>
+            <ul class="collection">
+                <li class="collection-item filter filter-active" id="filter_all">All</li>
+                <li class="collection-item filter" id="filter_active">Active</li>
+                <li class="collection-item filter" id="completed">Completed</li>
+                <li class="collection-item" style="display: inline-block;">Completed tasks: <span id="counter"></span></li>
+            </ul>
         </section>
 
     </main>
 
 <script src="./js/index.js"></script>
-<script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
