--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="collection-item filter filter-active" id="filter_all">All</li>
                     <li class="collection-item filter" id="filter_active">Active</li>
                     <li class="collection-item filter" id="completed">Completed</li>
-                    <li class="collection-item" style="display: inline-block;">Completed tasks: <span id="counter"></span></li>
+                    <li class="collection-item" style="display: inline-block;">Tasks remaining: <span id="counter"></span></li>
                 </ul>
             </section>
         </div>
